FEAT: 다른 사용자에게 url 전송

--- a/form-builder/index.html
+++ b/form-builder/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>현대종합금속 설문지</title>
+    <title>설문지</title>
     <meta name="description" content="구글 폼 스타일의 설문 빌더. 100점 합계 제약 기능 포함">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,10 +17,13 @@
         <!-- Header -->
         <header class="app-header">
             <div class="header-content">
-                <h1>📋 현대종합금속 설문지</h1>
+                <h1>📋 설문지</h1>
                 <!-- <p>Google Forms 스타일 설문지 만들기</p> -->
             </div>
             <div class="header-actions">
+                <button id="shareBtn" class="btn btn-primary">
+                    <span>🔗</span> 공유하기
+                </button>
                 <button id="settingsBtn" class="btn btn-outline">
                     <span>⚙️</span> 설정
                 </button>
